fixed overflow in all index file
in main.css

--- a/electron_foofy/css/main.css
+++ b/electron_foofy/css/main.css
@@ -15,6 +15,7 @@ body{
     background: #050321;
     color: #fff;
     font-family: 'Roboto';
+    overflow: hidden;
 }
 section{
     display: block;
